@@ -1,10 +1,10 @@
 """Support code for distutils test cases."""
-
+import os
 import shutil
 import tempfile
 
 from distutils import log
-
+from distutils.dist import Distribution
 
 class LoggingSilencer(object):
 
@@ -54,6 +54,23 @@ class TempdirManager(object):
             f.write(content)
         finally:
             f.close()
+
+    def create_dist(self, pkg_name='foo', **kw):
+        """Will generate a test environment.
+
+        This function creates:
+         - a Distribution instance using keywords
+         - a temporary directory with a package structure
+
+        It returns the package directory and the distribution
+        instance.
+        """
+        tmp_dir = self.mkdtemp()
+        pkg_dir = os.path.join(tmp_dir, pkg_name)
+        os.mkdir(pkg_dir)
+        dist = Distribution(attrs=kw)
+
+        return pkg_dir, dist
 
 class DummyCommand:
     """Class to store options for retrieval via set_undefined_options()."""
